--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        gcc: [10]
+
     steps:
       - name: Checkout page source
         uses: actions/checkout@v3
@@ -24,6 +28,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+
+      - name: Install GFortran (Linux)
+        run: |
+          sudo update-alternatives \
+            --install /usr/bin/gcc gcc /usr/bin/gcc-${{ matrix.gcc }} 100 \
+            --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-${{ matrix.gcc }} \
+            --slave /usr/bin/gcov gcov /usr/bin/gcov-${{ matrix.gcc }}
 
       - name: Install sphinx
         run: pip3 install --user -r requirements.txt
