Correct gFTL category (#335)
Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>

--- a/data/package_index.yml
+++ b/data/package_index.yml
@@ -434,6 +434,20 @@
   version: none
   license: LGPL-3.0-or-later
 
+- name: gFTL
+  github: Goddard-Fortran-Ecosystem/gFTL
+  description: Templates for STL-like Fortran implementations of containers for arbitrary types (Vector, Set, Map, Deque, Stack, Queue, ...)
+  categories: data-types
+  tags: container template
+  license: Apache-2.0
+
+- name: gFTL-shared
+  github: Goddard-Fortran-Ecosystem/gFTL-shared
+  description: Instantiations of gFTL templates of common containers for intrinsic types
+  categories: data-types
+  tags: container template
+  license: Apache-2.0
+
 - name: PENF
   github: szaghi/PENF
   description: Provides portable kind-parameters and many useful procedures to deal with them
@@ -1540,20 +1554,6 @@
   description: Object-oriented Fortran falling block game using Curses console graphics
   categories: examples
   tags: game
-
-- name: gFTL
-  github: Goddard-Fortran-Ecosystem/gFTL
-  description: Templates for STL-like Fortran implementations of containers for arbitrary types (Vector, Set, Map, Deque, Stack, Queue, ...)
-  categories: programming
-  tags: container template
-  license: Apache-2.0
-
-- name: gFTL-shared
-  github: Goddard-Fortran-Ecosystem/gFTL-shared
-  description: Instantiations of gFTL templates of common containers for intrinsic types
-  categories: programming
-  tags: container template
-  license: Apache-2.0
 
 - name: yaFyaml
   github: Goddard-Fortran-Ecosystem/yaFyaml
