--- a/.github/workflows/closePR.yml
+++ b/.github/workflows/closePR.yml
@@ -1,46 +1,45 @@
 # Github action to cleanup a PR preview
-# Runs when a pull request is merged or comment contains '#delete_preview'
+# Runs on dispatch or weekly schedule and deletes closed PR previews that are older than 7 days
 #
 
 name: PR Preview Cleanup
 
 on:
-  issue_comment:
-    types: [created]
-
-  pull_request:
-    types:
-      - closed
+  workflow_dispatch:
+  schedule:
+    - cron: "0 3 * * 1"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true || contains(github.event.comment.body, '#delete_preview')
 
     steps:
-      # Checkout existing gh-pages branch into PUBLISH_DIR
       - name: Checkout gh-pages
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: gh-pages
-
-      # Cleanup preview files
-      - name: PR Cleanup 
-        run: rm -rf pr/${{github.event.issue.number}}
+          
+      - name: Iterate and Check PRs
+        run: |
+          pr_folders=($(cd pr && ls -d */))
+          closed_pr=()
+          for pr_folder in "${pr_folders[@]}"; do
+            pr_status=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -X GET "https://api.github.com/repos/${{ github.repository }}/pulls/${pr_folder::-1}" \
+              | jq -r '.state')
+            echo "PR ${pr_folder::-1} is $pr_status"
+            if [ "$pr_status" != "open" ]; then
+              rm -rf "pr/${pr_folder::-1}"
+              closed_pr+=("${pr_folder::-1}")
+              echo "Removed folder pr/${pr_folder::-1} for closed PR ${pr_folder::-1}"
+            fi
+          done
       
       - name: Commit and push to gh-pages
         uses: EndBug/add-and-commit@v9.1.3
         with:
           committer_email: 53436240+fortran-lang@users.noreply.github.com
           committer_name: Fortran
-          message: "Sphinx build cleanup pr/${{github.event.issue.number}}"
+          message: "Sphinx build cleanup pr/${closed_pr[@]}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Comment on pull request
-      - name: Comment on pull request
-        uses: peter-evans/create-or-update-comment@v3
-        if: contains(github.event.comment.body, '#delete_preview')
-        with:
-          issue-number: ${{github.event.issue.number}}
-          body: The preview build for this PR has now been deleted.
