--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Sphinx==7.2.6
-ablog==0.11.4.post1
+ablog==0.11.6
 pydata-sphinx-theme==0.9.0
 myst-parser==2.0.0 
 sphinx_design==0.5.0
@@ -7,8 +7,8 @@ sphinx_copybutton==0.5.2
 sphinx-jinja==2.0.2  
 jinja2==3.1.2  
 requests==2.31.0 
-black==23.9.1 
-pylint==2.17.5
-pre-commit==3.4.0
+black==23.11.0 
+pylint==3.0.2
+pre-commit==3.5.0
 sphinx-sitemap==2.5.1
 sphinx-favicon==1.0.1
