Added qr_mumps to package_index.yml (#372)
* Added qr_mumps to package_index.yml

Added an entry describing the qr_mumps package

* Update data/package_index.yml

---------

Co-authored-by: Milan Curcic <caomaco@gmail.com>

--- a/data/package_index.yml
+++ b/data/package_index.yml
@@ -1067,6 +1067,12 @@
   categories: numerical
   tags: quadpack quadpack2 integrals
 
+- name: qr_mumps
+  gitlab: qr_mumps/qr_mumps
+  description: A parallel multifrontal solver for sparse linear systems based on QR and Cholesky decomposition
+  categories: numerical
+  tags: QR Cholesky sparse multifrontal least-squares
+  
 # --- Scientific codes ---
 
 - name: astro-fortran
