--- a/data/package_index.yml
+++ b/data/package_index.yml
@@ -297,6 +297,13 @@
   license: LGPL-3.0-or-later
   version: 1.3
 
+- name: preCICE
+  github: precice/precice
+  description: A coupling library for partitioned multi-physics simulations, including, but not restricted to fluid-structure interaction and conjugate heat transfer simulations.
+  categories: interfaces scientific
+  tags: cpp c python julia matlab rust mpi
+  license: LGPL-3.0
+
 # --- Compiler
 
 - name: hipfort
