Update record "Modern Fortran Explained" (#452)

--- a/data/learning.yml
+++ b/data/learning.yml
@@ -460,11 +460,11 @@ reference-books:
     location: Boca Raton
     publisher: CRC Press
 
-  - author: Metcalf, M., Reid, J. and Cohen, M.
-    year: 2018
+  - author: Metcalf, M., Reid, J., Cohen, M., and Bader, R.
+    year: 2024
     title: Modern Fortran Explained
-    url: https://global.oup.com/academic/product/modern-fortran-explained-9780198811893
-    edition: 5th ed
+    url: https://global.oup.com/academic/product/modern-fortran-explained-9780198876571
+    edition: 6th ed
     location: Oxford, UK
     publisher: Oxford University Press
 
