Add athena entry to package index (#451)

--- a/data/package_index.yml
+++ b/data/package_index.yml
@@ -1079,7 +1079,14 @@
   description: A parallel multifrontal solver for sparse linear systems based on QR and Cholesky decomposition
   categories: numerical
   tags: QR Cholesky sparse multifrontal least-squares
-  
+
+- name: athena
+  github: nedtaylor/athena
+  description: A library for building, training and testing feed-forward neural networks.
+  categories: numerical
+  tags: machine-learning convolutional-neural-networks
+  license: MIT
+
 # --- Scientific codes ---
 
 - name: astro-fortran
